<resources>
    <string name="app_name">Sudoku</string>

    <!--Login Activity-->
    <string name="talkback_login">Login</string>
    <string name="talkback_offline">Offline Mode</string>

    <string name="online_mode">帐号登陆</string>
    <string name="offline_mode">游客登录</string>
    <string name="user_faq1">点击登录即表示您已经同意</string>
    <string name="user_faq2">《用户协议》</string>

    <string name="dialog_titleLogin">登录账号</string>
    <string name="dialog_etUsername">用户名</string>
    <string name="dialog_etPassword">密码</string>
    <string name="dialog_login">登录</string>
    <string name="dialog_cancel">取消</string>
    <string name="dialog_loginSucceed">登陆成功</string>
    <string name="dialog_loginFailed">登陆失败</string>
    <string name="dialog_loginNonExsist">账户不存在</string>

    <!--License Activity-->
    <string name="user_license">用户许可协议</string>
    <string name="settings_license_activity_unavailable">暂无用户许可协议</string>

    <!--Switch Activity-->
    <string name="practice_mode">练习模式</string>
    <string name="normal_mode">开始游戏</string>
    <string name="against_mode">联机模式</string>
    <string name="username_random">手机游客</string>
    <string name="best_source">最佳成绩:</string>
    <string name="no_source">暂无数据</string>


    <string name="fragment_keyboard_button_9">9</string>
    <string name="fragment_keyboard_button_8">8</string>
    <string name="fragment_keyboard_button_7">7</string>
    <string name="fragment_keyboard_button_6">6</string>
    <string name="fragment_keyboard_button_5">5</string>
    <string name="fragment_keyboard_button_4">4</string>
    <string name="fragment_keyboard_button_3">3</string>
    <string name="fragment_keyboard_button_2">2</string>
    <string name="fragment_keyboard_button_1">1</string>
    <string name="activity_board_game_text_level_string">等级:</string>
    <string name="fragment_cell_pencil_1">1</string>
    <string name="fragment_cell_pencil_2">2</string>
    <string name="fragment_cell_pencil_3">3</string>
    <string name="fragment_cell_pencil_4">4</string>
    <string name="fragment_cell_pencil_5">5</string>
    <string name="fragment_cell_pencil_6">6</string>
    <string name="fragment_cell_pencil_7">7</string>
    <string name="fragment_cell_pencil_8">8</string>
    <string name="fragment_cell_pencil_9">9</string>
    <string name="activity_board_game_pencil_text">草稿</string>
    <string name="activity_board_game_pen_text">答题</string>

    <string name="enable_p2p_button">P2P On/Off</string>
    <string name="discover_peers_button">Discover</string>
    <string name="connect_peer_button">连接</string>
    <string name="disconnect_peer_button">断开连接</string>
    <string name="get_file_button">选择文件</string>
    <string name="empty"></string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="client_text">点击选择文件选取要发送的文件(stored) file</string>
    <string name="empty_message">没有找到设备，请点击右上角搜索设备</string>
    <string name="p2p_off_warning">服务不可用，请打开wifi</string>
    <string name="group_owner_text">"Am I the Group Owner? "</string>
    <string name="label_me">我</string>
    <string name="label_peers">扫描到的设备</string>
</resources>
