<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_cell___layout"
    android:orientation="vertical"
    android:layout_width="@dimen/cell_size"
    android:layout_height="@dimen/cell_size"
    android:gravity="center"
    android:background="@drawable/corner_radius_unpainted_cell"
    android:layout_margin="20dp">

    <TextView
        android:id="@+id/frament_cell___main_number"
        android:layout_width="@dimen/cell_size"
        android:layout_height="@dimen/cell_size"
        android:gravity="center"
        tools:text="4"
        android:textColor="@color/text_color"
        android:textSize="@dimen/principal_text_size" />

    <TextView
        android:id="@+id/frament_cell___pencil_1"
        android:layout_width="@dimen/cell_size"
        android:layout_height="@dimen/cell_size"
        android:gravity="left|top"
        android:text="@string/fragment_cell_pencil_1"
        android:textColor="@color/text_color"
        android:textSize="@dimen/pencil_text_size"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/frament_cell___pencil_2"
        android:layout_width="@dimen/cell_size"
        android:layout_height="@dimen/cell_size"
        android:gravity="center|top"
        android:text="@string/fragment_cell_pencil_2"
        android:textColor="@color/text_color"
        android:textSize="@dimen/pencil_text_size"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/frament_cell___pencil_3"
        android:layout_width="@dimen/cell_size"
        android:layout_height="@dimen/cell_size"
        android:gravity="right|top"
        android:text="@string/fragment_cell_pencil_3"
        android:textColor="@color/text_color"
        android:textSize="@dimen/pencil_text_size"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/frament_cell___pencil_4"
        android:layout_width="@dimen/cell_size"
        android:layout_height="@dimen/cell_size"
        android:gravity="left|center"
        android:text="@string/fragment_cell_pencil_4"
        android:textColor="@color/text_color"
        android:textSize="@dimen/pencil_text_size"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/frament_cell___pencil_5"
        android:layout_width="@dimen/cell_size"
        android:layout_height="@dimen/cell_size"
        android:gravity="center|center"
        android:text="@string/fragment_cell_pencil_5"
        android:textColor="@color/text_color"
        android:textSize="@dimen/pencil_text_size"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/frament_cell___pencil_6"
        android:layout_width="@dimen/cell_size"
        android:layout_height="@dimen/cell_size"
        android:gravity="right|center"
        android:text="@string/fragment_cell_pencil_6"
        android:textColor="@color/text_color"
        android:textSize="@dimen/pencil_text_size"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/frament_cell___pencil_7"
        android:layout_width="@dimen/cell_size"
        android:layout_height="@dimen/cell_size"
        android:gravity="left|bottom"
        android:text="@string/fragment_cell_pencil_7"
        android:textColor="@color/text_color"
        android:textSize="@dimen/pencil_text_size"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/frament_cell___pencil_8"
        android:layout_width="@dimen/cell_size"
        android:layout_height="@dimen/cell_size"
        android:gravity="bottom|center"
        android:text="@string/fragment_cell_pencil_8"
        android:textColor="@color/text_color"
        android:textSize="@dimen/pencil_text_size"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/frament_cell___pencil_9"
        android:layout_width="@dimen/cell_size"
        android:layout_height="@dimen/cell_size"
        android:gravity="right|bottom"
        android:text="@string/fragment_cell_pencil_9"
        android:textColor="@color/text_color"
        android:textSize="@dimen/pencil_text_size"
        android:visibility="invisible" />
</RelativeLayout>
